public/stylesheets/main.css
body {
	font-family: sans-serif;
}

.displayUsername {
	font-size: 1.5em;
	margin-right: 15px;
	color: #efefef;
}

.mainSection {
	display: none;
	margin-top: 75px;
}


.chatWindow {
	background: #EBEBEB;
	width: 100%;
	height: 400px;
	overflow-y: scroll;
	overflow-x: hidden;
	padding-right: 10px;
}


.userWindow {
	background: #EBEBEB;
	width: 100%;
	max-height: 560px;
	padding: 20px;
}

.inputFieldContainer {
	float: right;
	margin-top: 15px;
	width: 100%;
}

.inputField {
	width: 100%;
	height: 50px; 
}

.message {
	width: 100%;
	background: #849CA5;
	line-height: 40px;
	margin-bottom: 2px;
	padding: 5px;
}

.message:nth-child(2n) {
	background: #aaaaaa;
}

.socketStatus {
	position: fixed;
	bottom: 25px;
	right: 25px;
	width: 50px;
	height: 50px;
	background: #AEEFFF;
	-moz-border-radius: 360px;
	-webkit-border-radius: 360px;
	-o-border-radius: 360px;
	border-radius: 360px;
}

.connected {
	background: #81C774;
}

.disconnected {
	background: #C77474;
}

